SLING-10118 Use backward compatible code